<resources>
    <string name="app_name">Send Meal</string>
    <string name="HomeString">Home</string>
    <string name="RegistrarString">Registrar Usuario</string>
    <string name="CrearPlatoString">Crear Plato</string>
    <string name="ListaPlatoString">Lista Plato</string>

    <string name="NombreString">Nombre</string>
    <string name="ClaveString">Clave</string>
    <string name="RepetirClaveString">Repetir Clave</string>
    <string name="CorreoString">Correo Electrónico</string>
    <string name="TarjetaString">Tarjeta de Crédito</string>
    <string name="TipoCuentaString">Tipo de Cuenta</string>
    <string name="TipoCuentaBaseString">Base</string>
    <string name="TipoCuentaPremiumString">Premium</string>
    <string name="TipoCuentaFullString">Full</string>
    <string name="CreditoInicialString">Credito Inicial</string>
    <string name="NotificarCorreoString">Notificar por Correo Electrónico</string>
    <string name="NoEnviarNotificacionesBotonString">NO ENVIAR NOTIFICACIONES AL MAIL</string>
    <string name="EnviarNotificacionesBotonString">ENVIAR NOTIFICACIONES AL MAIL</string>
    <string name="EsVendedorString">Es Vendedor</string>
    <string name="AliasCBUString">Alias CBU</string>
    <string name="CBUString">CBU</string>
    <string name="TerminosYCondicionesString">Acepta términos y condiciones</string>
    <string name="RegistrarBotonString">REGISTRAR</string>

    <string name="HintNombreString">Ingrese Nombre</string>
    <string name="HintClaveString">Ingrese Clave</string>
    <string name="HintRepetirClaveString">Repita Clave</string>
    <string name="HintCorreoString">Ingrese Correo Electrónico</string>
    <string name="HintNumeroTarjetaString">Número</string>
    <string name="HintCCVTarjetaString">CCV</string>
    <string name="HintVencimientoTarjetaString">MM/AA</string>
    <string name="HintAliasCBUString">Ingrese Alias CBU</string>
    <string name="HintCBUString">Ingrese CBU</string>

    <string name="PlatoNombreString">Nombre del Plato</string>
    <string name="PlatoDescripcionString">Descrioción del Plato</string>
    <string name="PlatoPrecioString">Precio del Plato</string>
    <string name="PlatoCaloriasString">Calorías del Plato</string>
    <string name="PlatoGuardarString">Guardar</string>

    <string name="HintPlatoNombreString">Ingrese Nombre del Plato</string>
    <string name="HintPlatoDescripcionString">Ingrese Descrioción del Plato</string>
    <string name="HintPlatoPrecioString">Ingrese Precio del Plato</string>
    <string name="HintPlatoCaloriasString">Ingrese Calorías del Plato</string>

    <string name="popup_nombre_plato">Nombre: </string>
    <string name="popup_descripcion_plato">Descripcion: </string>
    <string name="popup_precio_plato">Precio: </string>
    <string name="popup_calorias_plato">Calorias: </string>

    <string name="menu_op_01">Registrar</string>
    <string name="menu_op_02">Crear Item</string>
    <string name="menu_op_03">Lista de Items</string>
    <string name="ofertarString">Ofertar</string>
    <string name="editarString">Editar</string>
    <string name="eliminarString">Eliminar</string>
    <string name="crearPedido_subtitulo">Crear Pedido</string>
    <string name="infoPedido_subtitulo">Info Pedido</string>
    <string name="agregar_plato_pedido">Agregar Plato</string>
    <string name="title_activity_maps">Map</string>


</resources>
