<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context=".MainActivity">

        <TextView
            android:id="@+id/Titulo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/TituloString"
            android:textColor="@color/colorTitulo"
            android:textSize="@dimen/titulo"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/Nombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/etiquetas"
            android:textColor="@color/colorEtiqueta"
            android:text="@string/NombreString" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/IngresoNombre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/etiquetas"
                android:hint="@string/HintNombreString" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/Clave"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/etiquetas"
            android:textColor="@color/colorEtiqueta"
            android:text="@string/ClaveString" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/IngresoClave"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/etiquetas"
                android:hint="@string/HintClaveString" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/RepetirClave"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/etiquetas"
            android:textColor="@color/colorEtiqueta"
            android:text="@string/RepetirClaveString" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/IngresoClave2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/etiquetas"
                android:hint="@string/HintRepetirClaveString" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/Correo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/etiquetas"
            android:textColor="@color/colorEtiqueta"
            android:text="@string/CorreoString" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/IngresoCorreo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/etiquetas"
                android:hint="@string/HintCorreoString" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/Tarjeta"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/etiquetas"
            android:textColor="@color/colorEtiqueta"
            android:text="@string/TarjetaString" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="151dp"
                android:layout_height="match_parent"
                android:layout_weight="0.5">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/IngresoNumTarjeta"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0"
                    android:textSize="@dimen/etiquetas"
                    android:hint="@string/HintNumeroTarjetaString" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="0.2">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/IngresoCCVTarjeta"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.2"
                    android:textSize="@dimen/etiquetas"
                    android:hint="@string/HintCCVTarjetaString" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="0.3">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/IngresoFechaTarjeta"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.3"
                    android:textSize="@dimen/etiquetas"
                    android:hint="@string/HintVencimientoTarjetaString" />
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/TipoCuenta"
                android:layout_width="145dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.25"
                android:text="@string/TipoCuentaString"
                android:textSize="@dimen/etiquetas" />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.75"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/ButtonBase"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.3"
                    android:textSize="@dimen/etiquetas"
                    android:text="@string/TipoCuentaBaseString" />

                <RadioButton
                    android:id="@+id/ButtonPremium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.3"
                    android:textSize="@dimen/etiquetas"
                    android:text="@string/TipoCuentaPremiumString" />

                <RadioButton
                    android:id="@+id/ButtonFull"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.3"
                    android:textSize="@dimen/etiquetas"
                    android:text="@string/TipoCuentaFullString" />

            </RadioGroup>

        </LinearLayout>

        <TextView
            android:id="@+id/CreditoInicial"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/etiquetas"
            android:textColor="@color/colorEtiqueta"
            android:text="@string/CreditoInicialString" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <SeekBar
                android:id="@+id/IngresoCredito"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:max="1500" />

            <TextView
                android:id="@+id/MontoCredito"
                android:textSize="@dimen/etiquetas"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <TextView
            android:id="@+id/Notificar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/etiquetas"
            android:text="@string/NotificarCorreoString" />

        <ToggleButton
            android:id="@+id/ButtonNotificaciones"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="ToggleButton"
            android:textSize="@dimen/etiquetas"
            android:textOff="@string/NoEnviarNotificacionesBotonString"
            android:textOn="@string/EnviarNotificacionesBotonString" />

        <Switch
            android:id="@+id/ButtonEsVendedor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/etiquetas"
            android:text="@string/EsVendedorString" />

        <LinearLayout
            android:id="@+id/LayoutDatosBancarios"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone">

            <TextView
                android:id="@+id/AliasCBU"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/etiquetas"
                android:text="@string/AliasCBUString" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/IngresoAliasCBU"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/etiquetas"
                    android:hint="@string/HintAliasCBUString" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/CBU"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textSize="@dimen/etiquetas"
                android:text="@string/CBUString" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/IngresoCBU"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/etiquetas"
                    android:hint="@string/HintCBUString" />
            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <CheckBox
            android:id="@+id/ButtonTerminosYCondiciones"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/etiquetas"
            android:text="@string/TerminosYCondicionesString" />

        <Button
            android:id="@+id/ButtonRegistrar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/etiquetas"
            android:text="@string/RegistrarBotonString" />

    </LinearLayout>
</ScrollView>