<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Activities.CrearItem">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_crear_item"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:navigationIcon="?attr/homeAsUpIndicator"
        app:titleTextColor="@android:color/white">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/TituloApp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/app_name"
                android:textColor="@android:color/white"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/SubtituloCrear"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/CrearPlatoString"
                android:textColor="@android:color/white"
                android:textSize="14sp"
                android:textStyle="bold" />

        </LinearLayout>

    </androidx.appcompat.widget.Toolbar>

    <TextView
        android:id="@+id/textView9"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/PlatoNombreString"
        android:textColor="@color/colorEtiqueta"
        android:textSize="@dimen/etiquetas" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ingresoNombrePlato"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:errorEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/HintPlatoNombreString"
            android:singleLine="true" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/textView10"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/PlatoDescripcionString"
        android:textColor="@color/colorEtiqueta"
        android:textSize="@dimen/etiquetas" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ingresoDescripcionPlato"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:errorEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/HintPlatoDescripcionString"
            android:singleLine="true" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/textView11"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/PlatoPrecioString"
        android:textColor="@color/colorEtiqueta"
        android:textSize="@dimen/etiquetas" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ingresoPrecioPlato"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:errorEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/HintPlatoPrecioString"
            android:inputType="numberDecimal"
            android:singleLine="true" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/textView12"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/PlatoCaloriasString"
        android:textColor="@color/colorEtiqueta"
        android:textSize="@dimen/etiquetas" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ingresoCaloriasPlato"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:errorEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/HintPlatoCaloriasString"
            android:inputType="numberDecimal"
            android:singleLine="true" />

    </com.google.android.material.textfield.TextInputLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp">

        <TextView
            android:id="@+id/texto_agregar_foto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_centerHorizontal="true"
            android:layout_marginEnd="05dp"
            android:layout_toStartOf="@id/agregar_foto_flotante"
            android:text="Agregar Imagen" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/agregar_foto_flotante"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="15dp"
            android:backgroundTint="@color/colorPrimary"
            android:clickable="true"
            android:isScrollContainer="false"
            android:src="@android:drawable/ic_menu_camera"
            android:tint="@android:color/background_light" />

    </RelativeLayout>

    <Button
        android:id="@+id/buttonRegistrarPlato"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/PlatoGuardarString"
        android:textAlignment="center" />

</LinearLayout>