<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="20dp"
    android:clickable="true"
    android:fadingEdge="horizontal|vertical"
    android:focusable="true"
    app:cardCornerRadius="20dp"
    android:layout_centerInParent="true">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/imagenPlato"
            android:layout_marginStart="15dp"
            android:orientation="vertical">
            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/imagenPlato"
                android:layout_width="wrap_content"
                android:layout_height="200dp"
                android:scaleType="centerInside"
                android:src="@drawable/plato_01"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="5dp"/>
            <TextView
                android:id="@+id/nombrePlatoPopup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/popup_nombre_plato"
                android:textSize="16dp">
            </TextView>
            <TextView
                android:id="@+id/descripcionPlatoPopup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/popup_descripcion_plato"
                android:textSize="16dp"
                android:singleLine="false">
            </TextView>
            <TextView
                android:id="@+id/precioPlatoPopup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/popup_precio_plato"
                android:textSize="16dp">
            </TextView>
            <TextView
                android:id="@+id/caloriasPlatoPopup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/popup_calorias_plato"
                android:textSize="16dp">
            </TextView>
        </LinearLayout>
</androidx.cardview.widget.CardView>